--- a/app/templates/analysis/_menu.html
+++ b/app/templates/analysis/_menu.html
@@ -108,7 +108,7 @@
                 <div class="row g-2 mb-3">
                     <div class="col-4">
                         <a href="{{ url_for('analysis.market_overview') }}" class="btn btn-sm w-100 {{ 'btn-primary' if request.endpoint == 'analysis.market_overview' else 'btn-outline-primary' }}">
-                            <i class="bi bi-grid-3x3"></i><br><small>Markedsoversikt</small>
+                            <i class="bi bi-grid-3x3"></i><br><small style="font-size: 0.75rem;">Markedsoversikt</small>
                         </a>
                     </div>
                     <div class="col-4">
