--- a/app/templates/analysis/fundamental.html
+++ b/app/templates/analysis/fundamental.html
@@ -3,6 +3,7 @@
 {% block title %}Fundamental Analyse - Aksjeradar{% endblock %}
 
 {% block content %}
+{% include 'analysis/_menu.html' %}
 <div class="container-fluid mt-4">
     <div class="row">
         <div class="col-12">
